--- a/sampleApp/sampleApp/src/main/resources/application.properties
+++ b/sampleApp/sampleApp/src/main/resources/application.properties
@@ -1,10 +1,32 @@
-#spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+## Spring DATASOURCE (DataSourceAutoConfiguration & DataSourceProperties)
 
-spring.datasource.url=jdbc:mysql://localhost/rajat
-spring.datasource.username=root
+## Spring DATASOURCE (MYSQL)
+#spring.jpa.hibernate.ddl-auto=create-drop
+#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+#
+#spring.datasource.url=jdbc:mysql://localhost/rajat
+#spring.datasource.username=root
+#spring.datasource.password=password
+#spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+#
+#hibernate.jdbc.batch_size = 50
+#hibernate.order_inserts = true
+#hibernate.order_updates = true
+#hibernate.jdbc.batch_versioned_data = true
+#spring.jpa.properties.hibernate.jdbc.batch_size = 50
+#show-sql: true
+
+
+## Spring DATASOURCE (POSTGRES)
+spring.datasource.url=jdbc:postgresql://localhost:5432/rajat
+spring.datasource.username= postgres
 spring.datasource.password=password
-spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
+
+# The SQL dialect makes Hibernate generate better SQL for the chosen database
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+
+# Hibernate ddl auto (create, create-drop, validate, update)
+spring.jpa.hibernate.ddl-auto = drop
 
 hibernate.jdbc.batch_size = 50
 hibernate.order_inserts = true
