externalized the swgger details

--- a/sampleApp/sampleApp/src/main/resources/application.properties
+++ b/sampleApp/sampleApp/src/main/resources/application.properties
@@ -26,7 +26,7 @@ spring.datasource.password=password
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 
 # Hibernate ddl auto (create, create-drop, validate, update)
-spring.jpa.hibernate.ddl-auto = drop
+spring.jpa.hibernate.ddl-auto = update
 
 hibernate.jdbc.batch_size = 50
 hibernate.order_inserts = true
@@ -34,3 +34,10 @@ hibernate.order_updates = true
 hibernate.jdbc.batch_versioned_data = true
 spring.jpa.properties.hibernate.jdbc.batch_size = 50
 show-sql: true
+
+#Swagger INFO
+swagger.package = com.rajat.eCommerce.sampleApp.controller
+swagger.contact.name = Rajat Dey
+swagger.contact.email = rajat-dey@outlook.com
+swagger.contact.url = https://springframework.guru/about/
+
